--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
-
+<script src="data.js" type="text/javascript"></script>
+<script src="films.js" type="text/javascript"></script>
 <body>
 
     <h1>Sprint 4 IT ACADEMY - alan</h1>
